WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
234252
[LFC][IFC] Simple RTL content does not need visual reordering
https://bugs.webkit.org/show_bug.cgi?id=234252
Summary
[LFC][IFC] Simple RTL content does not need visual reordering
alan
Reported
2021-12-13 10:23:42 PST
ssia
Attachments
Patch
(3.87 KB, patch)
2021-12-13 10:25 PST
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2021-12-13 10:25:08 PST
Created
attachment 447024
[details]
Patch
EWS
Comment 2
2021-12-13 12:22:39 PST
Committed
r286968
(
245190@main
): <
https://commits.webkit.org/245190@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 447024
[details]
.
Radar WebKit Bug Importer
Comment 3
2021-12-13 12:23:22 PST
<
rdar://problem/86426863
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug