[LFC][IFC] Simple RTL content does not need visual reordering https://bugs.webkit.org/show_bug.cgi?id=234252

Reviewed by Antti Koivisto.

* layout/formattingContexts/inline/InlineItemsBuilder.cpp:
(WebCore::Layout::InlineItemsBuilder::build):
(WebCore::Layout::InlineItemsBuilder::breakAndComputeBidiLevels):
* layout/formattingContexts/inline/InlineItemsBuilder.h:
(WebCore::Layout::InlineItemsBuilder::needsVisualReordering const):
(WebCore::Layout::InlineItemsBuilder::needsVisualReordeering const): Deleted.



Canonical link: https://commits.webkit.org/245190@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@286968 268f45cc-cd09-0410-ab3c-d52691b4dbfc